--- a/index/kb2143850_vmware_vrealize_automation_table0_release_as-index.json
+++ b/index/kb2143850_vmware_vrealize_automation_table0_release_as-index.json
@@ -27,19 +27,19 @@
         "Installer Build Number":null,
         "Version":"8.1.0.9712"
     },
-    "16633378 -\u00a08.1.0.9583":{
+    "16633378":{
         "Product Release":"vRealize Automation 8.1 P2",
         "Release Date":"2020-07-28T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16633378 -\u00a08.1.0.9583",
+        "Build Number -\u00a0Version":"16633378 - 8.1.0.9583",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"8.1.0.9583"
     },
-    "16413777 -\u00a08.1.0.9465":{
+    "16413777":{
         "Product Release":"vRealize Automation 8.1 P1",
         "Release Date":"2020-06-19T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16413777 -\u00a08.1.0.9465",
+        "Build Number -\u00a0Version":"16413777 - 8.1.0.9465",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"8.1.0.9465"
     },
     "15986821":{
         "Product Release":"vRealize Automation 8.1",
@@ -132,12 +132,12 @@
         "Installer Build Number":null,
         "Version":"7.6.0.17326"
     },
-    "16841668\u00a0- 7.6.0.17319":{
+    "16841668":{
         "Product Release":"vRealize Automation 7.6 P14",
         "Release Date":"2020-09-22T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16841668\u00a0- 7.6.0.17319",
+        "Build Number -\u00a0Version":"16841668 - 7.6.0.17319",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17319"
     },
     "16809812":{
         "Product Release":"vRealize Automation 7.6 P13",
@@ -146,89 +146,89 @@
         "Installer Build Number":null,
         "Version":"7.6.0.17318"
     },
-    "16657764 -\u00a07.6.0.17306":{
+    "16657764":{
         "Product Release":"vRealize Automation 7.6 P12",
         "Release Date":"2020-08-06T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16657764 -\u00a07.6.0.17306",
+        "Build Number -\u00a0Version":"16657764 - 7.6.0.17306",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17306"
     },
-    "16630296 -\u00a07.6.0.17303":{
+    "16630296":{
         "Product Release":"vRealize Automation 7.6 P11",
         "Release Date":"2020-07-29T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16630296 -\u00a07.6.0.17303",
+        "Build Number -\u00a0Version":"16630296 - 7.6.0.17303",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17303"
     },
-    "16526925 -\u00a07.6.0.17279":{
+    "16526925":{
         "Product Release":"vRealize Automation 7.6 P10",
         "Release Date":"2020-07-15T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16526925 -\u00a07.6.0.17279",
+        "Build Number -\u00a0Version":"16526925 - 7.6.0.17279",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17279"
     },
-    "16318031 -\u00a07.6.0.17225":{
+    "16318031":{
         "Product Release":"vRealize Automation 7.6 P9",
         "Release Date":"2020-06-15T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16318031 -\u00a07.6.0.17225",
+        "Build Number -\u00a0Version":"16318031 - 7.6.0.17225",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17225"
     },
-    "16206122 -\u00a07.6.0.17216":{
+    "16206122":{
         "Product Release":"vRealize Automation 7.6 P8",
         "Release Date":"2020-05-29T00:00:00.000Z",
-        "Build Number -\u00a0Version":"16206122 -\u00a07.6.0.17216",
+        "Build Number -\u00a0Version":"16206122 - 7.6.0.17216",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17216"
     },
-    "15966931 -\u00a07.6.0.17198":{
+    "15966931":{
         "Product Release":"vRealize Automation 7.6 P7",
         "Release Date":"2020-04-15T00:00:00.000Z",
-        "Build Number -\u00a0Version":"15966931 -\u00a07.6.0.17198",
+        "Build Number -\u00a0Version":"15966931 - 7.6.0.17198",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17198"
     },
-    "15913876 -\u00a07.6.0.17194":{
+    "15913876":{
         "Product Release":"vRealize Automation 7.6 P6",
         "Release Date":"2020-04-01T00:00:00.000Z",
-        "Build Number -\u00a0Version":"15913876 -\u00a07.6.0.17194",
+        "Build Number -\u00a0Version":"15913876 - 7.6.0.17194",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17194"
     },
-    "15774893 -\u00a07.6.0.17174":{
+    "15774893":{
         "Product Release":"vRealize Automation 7.6 P5",
         "Release Date":"2020-03-27T00:00:00.000Z",
-        "Build Number -\u00a0Version":"15774893 -\u00a07.6.0.17174",
+        "Build Number -\u00a0Version":"15774893 - 7.6.0.17174",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17174"
     },
-    "15705069 -\u00a07.6.0.17165":{
+    "15705069":{
         "Product Release":"vRealize Automation 7.6 P4",
         "Release Date":"2020-03-11T00:00:00.000Z",
-        "Build Number -\u00a0Version":"15705069 -\u00a07.6.0.17165",
+        "Build Number -\u00a0Version":"15705069 - 7.6.0.17165",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17165"
     },
-    "15529008 -\u00a07.6.0.17136":{
+    "15529008":{
         "Product Release":"vRealize Automation 7.6 P3",
         "Release Date":"2020-02-26T00:00:00.000Z",
-        "Build Number -\u00a0Version":"15529008 -\u00a07.6.0.17136",
+        "Build Number -\u00a0Version":"15529008 - 7.6.0.17136",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.17136"
     },
-    "14907768 -\u00a07.6.0.16986":{
+    "14907768":{
         "Product Release":"vRealize Automation 7.6 P2",
         "Release Date":"2019-10-25T00:00:00.000Z",
-        "Build Number -\u00a0Version":"14907768 -\u00a07.6.0.16986",
+        "Build Number -\u00a0Version":"14907768 - 7.6.0.16986",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.16986"
     },
-    "13027280 -\u00a07.6.0.8249":{
+    "13027280":{
         "Product Release":"vRealize Automation 7.6",
         "Release Date":"2019-04-11T00:00:00.000Z",
-        "Build Number -\u00a0Version":"13027280 -\u00a07.6.0.8249",
+        "Build Number -\u00a0Version":"13027280 - 7.6.0.8249",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.6.0.8249"
     },
     "16877598":{
         "Product Release":"vRealize Automation 7.5 P21",
@@ -363,12 +363,12 @@
         "Installer Build Number":null,
         "Version":"7.4.0.17183"
     },
-    "14454487\u00a0- 7.4.0.16861":{
+    "14454487":{
         "Product Release":"vRealize Automation 7.4 P13",
         "Release Date":"2019-10-17T00:00:00.000Z",
-        "Build Number -\u00a0Version":"14454487\u00a0- 7.4.0.16861",
+        "Build Number -\u00a0Version":"14454487 - 7.4.0.16861",
         "Installer Build Number":null,
-        "Version":null
+        "Version":"7.4.0.16861"
     },
     "13731978":{
         "Product Release":"vRealize Automation 7.4 P12",
