--- a/index/kb2143850_vmware_vrealize_automation_table0_release_as-index.json
+++ b/index/kb2143850_vmware_vrealize_automation_table0_release_as-index.json
@@ -1,4 +1,11 @@
 {
+    "17746788":{
+        "Product Release":"vRealize Automation 8.3 P1",
+        "Release Date":"2021-03-16T00:00:00.000Z",
+        "Build Number -\u00a0Version":"17746788 - 8.3.0.15127",
+        "Installer Build Number":null,
+        "Version":"8.3.0.15127"
+    },
     "17551690":{
         "Product Release":"vRealize Automation 8.3",
         "Release Date":"2021-02-05T00:00:00.000Z",
@@ -96,6 +103,13 @@
         "Build Number -\u00a0Version":"14842736 - 8.0.0.6619",
         "Installer Build Number":"14878991 - 1.0.0.262",
         "Version":"8.0.0.6619"
+    },
+    "17293757":{
+        "Product Release":"vRealize Automation 7.6 P20",
+        "Release Date":"2021-02-19T00:00:00.000Z",
+        "Build Number -\u00a0Version":"17293757 - 7.6.0.17407",
+        "Installer Build Number":null,
+        "Version":"7.6.0.17407"
     },
     "17232196":{
         "Product Release":"vRealize Automation 7.6 P19",
