--- a/records/kb2150753_vmware_vsan_table0_release_as-records.json
+++ b/records/kb2150753_vmware_vsan_table0_release_as-records.json
@@ -1,5 +1,12 @@
 [
     {
+        "vSAN version":"vSAN 7.0 Update 2",
+        "ESXi version":"ESXi 7.0 Update 2",
+        "Release Date":"2021-03-09T00:00:00.000Z",
+        "Build Number":"17630552",
+        "vSAN on-disk format version":"14"
+    },
+    {
         "vSAN version":"vSAN 7.0 Update 1(c)",
         "ESXi version":"ESXi 7.0 Update 1c",
         "Release Date":"2020-12-17T00:00:00.000Z",
