--- a/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
+++ b/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
@@ -1,5 +1,12 @@
 [
     {
+        "Version":"ESXi 7.0 Update 2",
+        "Release Name":"ESXi 7.0 Update 2",
+        "Release Date":"2021-03-09T00:00:00.000Z",
+        "Build Number":"17630552",
+        "Installer Build Number":null
+    },
+    {
         "Version":"ESXi 7.0 Update 1d",
         "Release Name":"ESXi 7.0 Update 1d",
         "Release Date":"2021-02-04T00:00:00.000Z",
