Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/46ff709e0acd8f7fa62704a6974f4dbc0ecd7a39

--- a/index/kb2143838_vmware_vcenter_server_appliance_windows_vc_builds_as-index.json
+++ b/index/kb2143838_vmware_vcenter_server_appliance_windows_vc_builds_as-index.json
@@ -239,6 +239,16 @@
         "Release Name":null,
         "Installer Build Number":null
     },
+    "17720264":{
+        "Edition":"Windows",
+        "Version - Release Name":null,
+        "Release Date":"2021-03-23T00:00:00.000Z",
+        "Registry\/Release Notes":null,
+        "Client\/MOB\/vpxd.log":null,
+        "Version":"vCenter Server 6.5.0 U3o",
+        "Release Name":null,
+        "Installer Build Number":null
+    },
     "17590285":{
         "Edition":"Windows",
         "Version - Release Name":null,
