--- a/records/kb2143838_vmware_vcenter_server_appliance_windows_vc_builds_as-records.json
+++ b/records/kb2143838_vmware_vcenter_server_appliance_windows_vc_builds_as-records.json
@@ -266,6 +266,17 @@
     {
         "Edition":"Windows",
         "Version - Release Name":null,
+        "Release Date":"2021-03-23T00:00:00.000Z",
+        "Registry\/Release Notes":null,
+        "Client\/MOB\/vpxd.log":null,
+        "Build Number":"17720264",
+        "Version":"vCenter Server 6.5.0 U3o",
+        "Release Name":null,
+        "Installer Build Number":null
+    },
+    {
+        "Edition":"Windows",
+        "Version - Release Name":null,
         "Release Date":"2021-02-23T00:00:00.000Z",
         "Registry\/Release Notes":null,
         "Client\/MOB\/vpxd.log":null,
