--- a/table/kb2143838_vmware_vcenter_server_appliance_table1_release_as-table.json
+++ b/table/kb2143838_vmware_vcenter_server_appliance_table1_release_as-table.json
@@ -47,6 +47,17 @@
         {
             "index":1,
             "Edition":"VCSA",
+            "Version - Release Name":"vCenter Appliance 6.7 Update 3m (6.7.0.47000)",
+            "Release Date":"2021-03-18T00:00:00.000Z",
+            "VAMI\/Release Notes":"17713310",
+            "Client\/MOB\/vpxd.log":"17712750",
+            "Build Number":"17712750",
+            "Version":"vCenter Appliance 6.7 Update 3m",
+            "Release Name":"6.7.0.47000"
+        },
+        {
+            "index":2,
+            "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3l (6.7.0.46000)",
             "Release Date":"2020-11-19T00:00:00.000Z",
             "VAMI\/Release Notes":"17138064",
@@ -56,7 +67,7 @@
             "Release Name":"6.7.0.46000"
         },
         {
-            "index":2,
+            "index":3,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3k (6.7.0.45100)",
             "Release Date":"2020-10-22T00:00:00.000Z",
@@ -67,7 +78,7 @@
             "Release Name":"6.7.0.45100"
         },
         {
-            "index":3,
+            "index":4,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3j (6.7.0.45000)",
             "Release Date":"2020-08-20T00:00:00.000Z",
@@ -78,7 +89,7 @@
             "Release Name":"6.7.0.45000"
         },
         {
-            "index":4,
+            "index":5,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3i (6.7.0.44200)",
             "Release Date":"2020-07-30T00:00:00.000Z",
@@ -89,7 +100,7 @@
             "Release Name":"6.7.0.44200"
         },
         {
-            "index":5,
+            "index":6,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3h (6.7.0.44100)",
             "Release Date":"2020-05-28T00:00:00.000Z",
@@ -100,7 +111,7 @@
             "Release Name":"6.7.0.44100"
         },
         {
-            "index":6,
+            "index":7,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3g (6.7.0.44000)",
             "Release Date":"2020-04-28T00:00:00.000Z",
@@ -111,7 +122,7 @@
             "Release Name":"6.7.0.44000"
         },
         {
-            "index":7,
+            "index":8,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3f (6.7.0.43000)",
             "Release Date":"2020-04-09T00:00:00.000Z",
@@ -122,7 +133,7 @@
             "Release Name":"6.7.0.43000"
         },
         {
-            "index":8,
+            "index":9,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3e (6.7.0.42300)",
             "Release Date":"2020-03-26T00:00:00.000Z",
@@ -133,7 +144,7 @@
             "Release Name":"6.7.0.42300"
         },
         {
-            "index":9,
+            "index":10,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3d (6.7.0.42200)",
             "Release Date":"2020-02-27T00:00:00.000Z",
@@ -144,7 +155,7 @@
             "Release Name":"6.7.0.42200"
         },
         {
-            "index":10,
+            "index":11,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3c (6.7.0.42100)",
             "Release Date":"2020-01-30T00:00:00.000Z",
@@ -155,7 +166,7 @@
             "Release Name":"6.7.0.42100"
         },
         {
-            "index":11,
+            "index":12,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3b (6.7.0.42000)",
             "Release Date":"2019-12-05T00:00:00.000Z",
@@ -166,7 +177,7 @@
             "Release Name":"6.7.0.42000"
         },
         {
-            "index":12,
+            "index":13,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3a (6.7.0.41000)",
             "Release Date":"2019-10-24T00:00:00.000Z",
@@ -177,7 +188,7 @@
             "Release Name":"6.7.0.41000"
         },
         {
-            "index":13,
+            "index":14,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 3 (6.7.0.40000)",
             "Release Date":"2019-08-20T00:00:00.000Z",
@@ -188,7 +199,7 @@
             "Release Name":"6.7.0.40000"
         },
         {
-            "index":14,
+            "index":15,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 2c (6.7.0.32000)",
             "Release Date":"2019-07-16T00:00:00.000Z",
@@ -199,7 +210,7 @@
             "Release Name":"6.7.0.32000"
         },
         {
-            "index":15,
+            "index":16,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 2b (6.7.0.31100)",
             "Release Date":"2019-05-30T00:00:00.000Z",
@@ -210,7 +221,7 @@
             "Release Name":"6.7.0.31100"
         },
         {
-            "index":16,
+            "index":17,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 Update 2a (6.7.0.31000)",
             "Release Date":"2019-05-14T00:00:00.000Z",
@@ -221,7 +232,7 @@
             "Release Name":"6.7.0.31000"
         },
         {
-            "index":17,
+            "index":18,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 U2 (6.7.0.30000)",
             "Release Date":"2019-04-11T00:00:00.000Z",
@@ -232,7 +243,7 @@
             "Release Name":"6.7.0.30000"
         },
         {
-            "index":18,
+            "index":19,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 U1b (6.7.0.21000)",
             "Release Date":"2019-01-17T00:00:00.000Z",
@@ -243,7 +254,7 @@
             "Release Name":"6.7.0.21000"
         },
         {
-            "index":19,
+            "index":20,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 U1a (6.7.0.20100)",
             "Release Date":"2018-12-20T00:00:00.000Z",
@@ -254,7 +265,7 @@
             "Release Name":"6.7.0.20100"
         },
         {
-            "index":20,
+            "index":21,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7 U1 (6.7.0.20000)",
             "Release Date":"2018-10-16T00:00:00.000Z",
@@ -265,7 +276,7 @@
             "Release Name":"6.7.0.20000"
         },
         {
-            "index":21,
+            "index":22,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7d (6.7.0.14000)",
             "Release Date":"2018-08-14T00:00:00.000Z",
@@ -276,7 +287,7 @@
             "Release Name":"6.7.0.14000"
         },
         {
-            "index":22,
+            "index":23,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7c (6.7.0.13000)",
             "Release Date":"2018-07-26T00:00:00.000Z",
@@ -287,7 +298,7 @@
             "Release Name":"6.7.0.13000"
         },
         {
-            "index":23,
+            "index":24,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7b (6.7.0.12000)",
             "Release Date":"2018-06-28T00:00:00.000Z",
@@ -298,7 +309,7 @@
             "Release Name":"6.7.0.12000"
         },
         {
-            "index":24,
+            "index":25,
             "Edition":"VCSA",
             "Version - Release Name":"vCenter Appliance 6.7a (6.7.0.11000)",
             "Release Date":"2018-05-22T00:00:00.000Z",
@@ -307,17 +318,6 @@
             "Build Number":"8546293",
             "Version":"vCenter Appliance 6.7a",
             "Release Name":"6.7.0.11000"
-        },
-        {
-            "index":25,
-            "Edition":"VCSA",
-            "Version - Release Name":"vCenter Appliance 6.7 (6.7.0.10000)",
-            "Release Date":"2018-04-17T00:00:00.000Z",
-            "VAMI\/Release Notes":"8217866",
-            "Client\/MOB\/vpxd.log":"8170161",
-            "Build Number":"8170161",
-            "Version":"vCenter Appliance 6.7",
-            "Release Name":"6.7.0.10000"
         }
     ]
 }
