--- a/index/kb2143838_vmware_vcenter_server_appliance_all_vcenter_builds_as-index.json
+++ b/index/kb2143838_vmware_vcenter_server_appliance_all_vcenter_builds_as-index.json
@@ -109,6 +109,17 @@
         "Installer Build Number":null,
         "Registry\/Release Notes":null
     },
+    "17712750":{
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3m (6.7.0.47000)",
+        "Release Date":"2021-03-18T00:00:00.000Z",
+        "VAMI\/Release Notes":"17713310",
+        "Client\/MOB\/vpxd.log":"17712750",
+        "Version":"vCenter Appliance 6.7 Update 3m",
+        "Release Name":"6.7.0.47000",
+        "Edition":"VCSA",
+        "Installer Build Number":null,
+        "Registry\/Release Notes":null
+    },
     "17137327":{
         "Version - Release Name":"vCenter Appliance 6.7 Update 3l (6.7.0.46000)",
         "Release Date":"2020-11-19T00:00:00.000Z",
@@ -358,17 +369,6 @@
         "Client\/MOB\/vpxd.log":"8546293",
         "Version":"vCenter Appliance 6.7a",
         "Release Name":"6.7.0.11000",
-        "Edition":"VCSA",
-        "Installer Build Number":null,
-        "Registry\/Release Notes":null
-    },
-    "8170161":{
-        "Version - Release Name":"vCenter Appliance 6.7 (6.7.0.10000)",
-        "Release Date":"2018-04-17T00:00:00.000Z",
-        "VAMI\/Release Notes":"8217866",
-        "Client\/MOB\/vpxd.log":"8170161",
-        "Version":"vCenter Appliance 6.7",
-        "Release Name":"6.7.0.10000",
         "Edition":"VCSA",
         "Installer Build Number":null,
         "Registry\/Release Notes":null
@@ -1215,6 +1215,17 @@
         "VAMI\/Release Notes":null,
         "Client\/MOB\/vpxd.log":null,
         "Version":null,
+        "Release Name":null,
+        "Edition":"Windows",
+        "Installer Build Number":null,
+        "Registry\/Release Notes":null
+    },
+    "17720264":{
+        "Version - Release Name":null,
+        "Release Date":"2021-03-23T00:00:00.000Z",
+        "VAMI\/Release Notes":null,
+        "Client\/MOB\/vpxd.log":null,
+        "Version":"vCenter Server 6.5.0 U3o",
         "Release Name":null,
         "Edition":"Windows",
         "Installer Build Number":null,
