--- a/index/kb2143838_vmware_vcenter_server_appliance_table4_release_as-index.json
+++ b/index/kb2143838_vmware_vcenter_server_appliance_table4_release_as-index.json
@@ -1,4 +1,10 @@
 {
+    "17720264":{
+        "Version":"vCenter Server 6.5.0 U3o",
+        "Release Date":"2021-03-23T00:00:00.000Z",
+        "Installer Build Number":null,
+        "Edition":"Windows"
+    },
     "17590285":{
         "Version":"vCenter Server 6.5u3n",
         "Release Date":"2021-02-23T00:00:00.000Z",
