--- a/index/kb2143838_vmware_vcenter_server_appliance_vcsa_builds_as-index.json
+++ b/index/kb2143838_vmware_vcenter_server_appliance_vcsa_builds_as-index.json
@@ -99,6 +99,16 @@
         "Edition":"VCSA",
         "Installer Build Number":null
     },
+    "17712750":{
+        "Version - Release Name":"vCenter Appliance 6.7 Update 3m (6.7.0.47000)",
+        "Release Date":"2021-03-18T00:00:00.000Z",
+        "VAMI\/Release Notes":"17713310",
+        "Client\/MOB\/vpxd.log":"17712750",
+        "Version":"vCenter Appliance 6.7 Update 3m",
+        "Release Name":"6.7.0.47000",
+        "Edition":"VCSA",
+        "Installer Build Number":null
+    },
     "17137327":{
         "Version - Release Name":"vCenter Appliance 6.7 Update 3l (6.7.0.46000)",
         "Release Date":"2020-11-19T00:00:00.000Z",
@@ -336,16 +346,6 @@
         "Client\/MOB\/vpxd.log":"8546293",
         "Version":"vCenter Appliance 6.7a",
         "Release Name":"6.7.0.11000",
-        "Edition":"VCSA",
-        "Installer Build Number":null
-    },
-    "8170161":{
-        "Version - Release Name":"vCenter Appliance 6.7 (6.7.0.10000)",
-        "Release Date":"2018-04-17T00:00:00.000Z",
-        "VAMI\/Release Notes":"8217866",
-        "Client\/MOB\/vpxd.log":"8170161",
-        "Version":"vCenter Appliance 6.7",
-        "Release Name":"6.7.0.10000",
         "Edition":"VCSA",
         "Installer Build Number":null
     },
