Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/46ff709e0acd8f7fa62704a6974f4dbc0ecd7a39

--- a/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
+++ b/records/kb2143832_vmware_vsphere_esxi_table0_release_as-records.json
@@ -63,6 +63,13 @@
         "Installer Build Number":null
     },
     {
+        "Version":"ESXi 6.7 P05",
+        "Release Name":"ESXi670-202103001",
+        "Release Date":"2021-03-18T00:00:00.000Z",
+        "Build Number":"17700523",
+        "Installer Build Number":null
+    },
+    {
         "Version":"ESXI\u00a06.7 EP18",
         "Release Name":"ESXi670-202102001",
         "Release Date":"2021-02-23T00:00:00.000Z",
