--- a/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
+++ b/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
@@ -53,6 +53,12 @@
         "Release Date":"2020-04-02T00:00:00.000Z",
         "Installer Build Number":null
     },
+    "17700523":{
+        "Version":"ESXi 6.7 P05",
+        "Release Name":"ESXi670-202103001",
+        "Release Date":"2021-03-18T00:00:00.000Z",
+        "Installer Build Number":null
+    },
     "17499825":{
         "Version":"ESXI\u00a06.7 EP18",
         "Release Name":"ESXi670-202102001",
