--- a/index/kb2143853_vmware_view_table0_release_as-index.json
+++ b/index/kb2143853_vmware_view_table0_release_as-index.json
@@ -1,4 +1,8 @@
 {
+    "8.2.0.17736878":{
+        "Version":"Horizon 8 2103",
+        "Release Date":"2021-03-23T00:00:00.000Z"
+    },
     "8.1.0.17351278":{
         "Version":"Horizon 8 2012",
         "Release Date":"2021-01-07T00:00:00.000Z"
