Update from https://github.com/dominikzorgnotti/transform-vmware-product-builds-to-json/commit/46ff709e0acd8f7fa62704a6974f4dbc0ecd7a39

--- a/table/kb2143832_vmware_vsphere_esxi_table0_release_as-table.json
+++ b/table/kb2143832_vmware_vsphere_esxi_table0_release_as-table.json
@@ -708,7 +708,7 @@
             "index":85,
             "Version":"ESXi 6.0 Update 1 (VMSA-2017-0006)",
             "Release Name":"ESXi600-201703002",
-            "Release Date":null,
+            "Release Date":"2017-03-28T00:00:00.000Z",
             "Build Number":"5251621",
             "Installer Build Number":null
         },
