--- a/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
+++ b/index/kb2143832_vmware_vsphere_esxi_table0_release_as-index.json
@@ -506,7 +506,7 @@
     "5251621":{
         "Version":"ESXi 6.0 Update 1 (VMSA-2017-0006)",
         "Release Name":"ESXi600-201703002",
-        "Release Date":null,
+        "Release Date":"2017-03-28T00:00:00.000Z",
         "Installer Build Number":null
     },
     "5224934":{
